fix the postioning for the copy button in codeblocks + only show scrollbars when there is an overflow on the aside.

--- a/doc/user/assets/sass/_layout.scss
+++ b/doc/user/assets/sass/_layout.scss
@@ -344,7 +344,6 @@ table.inline-headings {
     flex: 1;
     position: sticky;
     top: 90px;
-    height: 100vh;
     overflow-y: auto;
 
     @media(max-width: 1050px) {
@@ -362,10 +361,10 @@ table.inline-headings {
     padding: var(--x-small) rem(2);
     position: sticky;
     top: 0;
-    height: 100vh;
     overflow-y: auto;
     font-size: var(--sm);
     padding-bottom: 8.5rem;
+    height: 100vh;
 
     &-top {
         margin-top: var(--pico);
